feat(#5): implemented select dropdown action
